welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: '(' expected but identifier found.
	for k <-1 to 3
            ^PictureMono:13: error: expected start of definition
override def run() {
         ^PictureMono:20: error: Unmatched closing brace '}' ignored here
}
^