welcome.lessons.welcome.methods.picture.PictureMono.scala.code
def faireV(){
	for k <-1 to 3
	avance()
	poseBrosse()
	gauche()
	avance()
	}
	
}


override def run() { for (i<- 1 to 4){
	faireV()
}
}
